<resources>
    <string name="app_name">Test application</string>
    <string name="sales_ic0n">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_us_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="app_name_first">Course</string>
    <string name="app_name_second">App</string>
    <string name="course_start_date">Старт обучения</string>
    <string name="course_level">Уровень</string>
    <string name="course_unity">
        Программа обучения Джава – рассчитана
        на новичков в данной сфере.

        За программу вы изучите построение
        графических приложений под ПК,
        разработку веб сайтов на основе Java
        Spring Boot, изучите построение
        полноценных Андроид приложений
        и отлично изучите сам язык Джава!</string>
</resources>